[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/Main/donutste.gd" type="Script" id=1]
[ext_resource path="res://Fonts/NiseSegaSonic.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Texture/donutstealer.png" type="Texture" id=4]

[sub_resource type="CylinderShape" id=1]
radius = 2.0

[sub_resource type="Animation" id=2]
resource_name = "bye"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area/CollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spatial:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, -7 ), Vector3( 0, -20, -7 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
length = 5.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "wait"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="DynamicFont" id=6]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("Spatial/Viewport")

[node name="donutste" type="Spatial" groups=[
"mac",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -7 )
script = ExtResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
billboard = 2
texture = ExtResource( 4 )
hframes = 4
vframes = 2

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bye = SubResource( 2 )
anims/go = SubResource( 3 )
anims/stop = SubResource( 4 )
anims/wait = SubResource( 5 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="Viewport" type="Viewport" parent="Spatial"]
size = Vector2( 300, 25 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="Spatial/Viewport"]
anchor_left = 0.42
anchor_top = 0.25
anchor_right = 0.44
anchor_bottom = 0.25
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.929412, 1, 1 )
text = "0"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
billboard = 1
texture = SubResource( 7 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
